# quantkit

./: .gitignore  CLAUDE.md  GUIDE.md  LOG.md  PLAN.md  PROJECT.md  pyproject.toml
docs/superpowers/plans/: 2026-04-05-quantkit-implementation.md  2026-04-06-cli-ux-upgrade.md
docs/superpowers/specs/: 2026-04-05-quantkit-design.md  2026-04-06-cli-ux-upgrade-design.md
research/: README.md
research/papers/: 2026-04-06-intramonth-momentum-cycle.md
research/strategies/: g1-dual-engine.md  pretom-calendar-sizing.md
src/quantkit/: __init__.py  __main__.py  cli.py  config.py  portfolio.py  prompt.py  stock_context.py
src/quantkit/backtest/: engine.py  strategies.py
src/quantkit/commands/: __init__.py  analysis.py  management.py  persona_cmd.py
src/quantkit/data/: cache.py  provider.py  tushare_src.py  yfinance_src.py
src/quantkit/factor/: engine.py
src/quantkit/persona/: engine.py
src/quantkit/persona/personas/: buffett.yaml
src/quantkit/risk/: engine.py
tests/: conftest.py  test_backtest.py  test_cache.py  test_cli_routing.py  test_commands.py  test_config.py  test_data.py  test_factor.py  test_integration.py  test_management.py  test_persona.py  test_portfolio.py  test_prompt.py  test_risk.py  test_stock_context.py  test_tushare.py
