[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantkit"
version = "0.1.0"
description = "Terminal-based personal investment toolkit"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "plotext>=5.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.31",
    "tushare>=1.4",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantkit = ["persona/personas/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["quantkit"]
